# irods_api_test

./: CMakeLists.txt  README.md  main.cpp
include/: irodsClientApiTest.h
src/: irodsClientApiTest.cpp
test/: testIO.txt
